Adds contour 1.26.1 and 1.22.3 rocks
The mentioned rock versions do not include procps, as it isn't included
in the original project's Dockerfile (they're scratch-based images).

--- a/tests/tox.ini
+++ b/tests/tox.ini
@@ -44,6 +44,7 @@ commands =
 pass_env =
     TEST_*
     ROCK_*
+    BUILT_ROCKS_METADATA
 
 [testenv:integration]
 description = Run integration tests
@@ -60,6 +61,7 @@ commands =
 pass_env =
     TEST_*
     ROCK_*
+    BUILT_ROCKS_METADATA
 
 
 [flake8]
