Creates directory before copying binary to it
Makes sure the destination directory exists before the copy.

--- a/1.28.2/rockcraft.yaml
+++ b/1.28.2/rockcraft.yaml
@@ -38,5 +38,6 @@ parts:
       - go/1.21/stable
     override-build: |
       make build 
+      mkdir -p "${CRAFT_PART_INSTALL}/bin/"
       cp contour ${CRAFT_PART_INSTALL}/bin/contour
 
